--- a/package.json
+++ b/package.json
@@ -3,17 +3,28 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node app",
+    "build": ""
   },
   "dependencies": {
+    "@shahen.poghosyan/awilix": "^4.2.3",
     "axios": "^0.19.2",
     "body-parser": "^1.19.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
+    "express-basic-auth": "^1.2.0",
+    "express-prometheus-middleware": "^0.8.5",
     "http-errors": "~1.6.3",
+    "log4js": "^6.1.0",
+    "mongoose": "^5.7.13",
     "morgan": "~1.9.1",
-    "ngrok": "^3.2.7"
+    "ngrok": "^3.2.7",
+    "swagger-jsdoc": "^3.4.0",
+    "swagger-ui-express": "^4.1.2"
+  },
+  "devDependencies": {
+    "eslint": "^6.8.0"
   }
 }
